--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -39,13 +39,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Setup ansible-playbook
+      - name: Install python and ansible
         run: |
           sudo apt update
           sudo apt install python3.10 python3.10-venv python3-pip -y
           python=$(which python3)
           $python -m pip install ansible==6.0.0
 
-      - name: Run ansible
+      - name: Setup ansible
         run: |
-          ansible --version
+          cd ansible
+          mkdir ./python-env && cd python-env
+          $python -m venv ansible
+          source ansible/bin/activate
+          cd ../ansible
+          python -m pip install -r requirements.txt
+          ansible-galaxy role install -r requirements.yml
+          ansible-galaxy collection install -r requirements.yml
