--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -53,6 +53,6 @@ jobs:
           $python -m venv ansible
           source ansible/bin/activate
           cd ../ansible
-          python -m pip install -r requirements.txt
+          $python -m pip install -r requirements.txt
           ansible-galaxy role install -r requirements.yml
           ansible-galaxy collection install -r requirements.yml
