--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -49,9 +49,13 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Setup ansible
-        working-directory: ansible
         run: |
+          cd ansible
+          mkdir ./python-env && cd python-env
+          python -m venv ansible
+          source ansible/bin/activate
+          cd ../
           python -m pip install -r requirements.txt
           ansible-galaxy role install -r requirements.yml
           ansible-galaxy collection install -r requirements.yml
-          ansible-inventory --graph | grep delius
+          pip freeze
