test ansible inventory

--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -59,3 +59,5 @@ jobs:
           ansible-galaxy role install -r requirements.yml
           ansible-galaxy collection install -r requirements.yml
           pip freeze
+          pwd
+          ansible-inventory | grep delius
