--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -50,7 +50,10 @@ jobs:
       - name: Pull and run container
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.CORE_SHARED_SERVICES_PRODUCTION_AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-          docker pull ${{ secrets.CORE_SHARED_SERVICES_PRODUCTION_AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/delius-core-ansible-aws-ecr-repo:latest
+          docker pull $image
+          docker run -v $GITHUB_WORKSPACE/ansible:/ansible $image ls /ansible
+        env:
+          image: ${{ secrets.CORE_SHARED_SERVICES_PRODUCTION_AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/delius-core-ansible-aws-ecr-repo:latest
 
       # - name: Setup ansible
       #   run: |
