--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -1,14 +1,20 @@
-name: Ansible AWS Image Build
+name: Delius Ansible AWS Image Build
 
 on:
   push:
     branches:
       - main
+    paths:
+      - docker/delius-ansible-aws/**
+      - .github/workflows/ansible-aws-image-build.yml
 
   pull_request:
     branches:
       - main
     types: [opened, edited, reopened, synchronize]
+    paths:
+      - docker/delius-ansible-aws/**
+      - .github/workflows/ansible-aws-image-build.yml
 
 permissions:
   packages: write
@@ -24,6 +30,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Docker Buildx
+        id: setup_buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Log into ghcr
         uses: docker/login-action@v1
         with:
@@ -31,6 +41,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: docker build
-        run: |
-          docker build docker/ansible-aws -t ansible-aws:0.1
+      - name: Build and push to ghcr
+        id: build_publish
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker/delius-ansible-aws
+          file: ../docker/delius-ansible-aws
+          platforms: linux/amd64
+          push: false
+          # tags: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+
+      # - name: docker build
+      #   run: |
+      #     docker build docker/ansible-aws -t ansible-aws:0.1
