--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -15,6 +15,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - ansible/**
+      - .github/workflows/test-automation-task.yml
 
   pull_request:
     branches:
