test ansible inventory

--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -52,19 +52,24 @@ jobs:
       #     sudo apt install python3.10 python3.10-venv python3-pip -y
       #     python -m pip install ansible==6.0.0
 
-      # - name: Configure AWS Credentials
-      #   id: login-aws
-      #   uses: aws-actions/configure-aws-credentials@v2
-      #   with:
-      #     aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
-      #     aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Test context
+      # - name: Test context
+      #   run: |
+      #     which ansible
+      #     which python
+      #     pwd
+
+      - name: Test ansible
+        working-directory: ansible
         run: |
-          which ansible
-          which python
-          pwd
+          ansible-inventory --graph | grep delius
 
       # - name: Pull and run container
       #   run: |
