--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -8,6 +8,7 @@ on:
       - docker/delius-ansible-aws/**
       - .github/workflows/ansible-aws-image-build.yml
 
+  # Commented out while spiking this work out
   # pull_request:
   #   branches:
   #     - main
@@ -50,7 +51,3 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
-
-      # - name: docker build
-      #   run: |
-      #     docker build docker/ansible-aws -t ansible-aws:0.1
