--- a/docker/ldap-automation/Dockerfile
+++ b/docker/ldap-automation/Dockerfile
@@ -9,6 +9,6 @@ RUN python3 -m pip install --upgrade pip
 
 # RUN python3 -m pip install git+https://github.com/oracle/python-oracledb.git
 
-RUN python3 -m pip install git+https://github.com/ministryofjustice/hmpps-ldap-automation-cli.git@nit815-automate-updating-home-areas
+RUN python3 -m pip install git+https://github.com/ministryofjustice/hmpps-ldap-automation-cli.git@v0.3.0-dev.3
 
 CMD ["ldap-automation"]
