build oracle from source because they can't do things right

--- a/docker/ldap-automation/Dockerfile
+++ b/docker/ldap-automation/Dockerfile
@@ -7,7 +7,7 @@ RUN python3 -m pip install --upgrade pip
 ## related to https://github.com/oracle/python-oracledb/issues/204 - pip version fails to install due to cpython3
 # ignore whilst in dev
 
-# RUN python3 -m pip install git+https://github.com/oracle/python-oracledb.git
+RUN python3 -m pip install git+https://github.com/oracle/python-oracledb.git
 
 RUN python3 -m pip install git+https://github.com/ministryofjustice/hmpps-ldap-automation-cli.git@v0.3.0-dev.3
 
