this seems to make oracle be happy

--- a/docker/ldap-automation/Dockerfile
+++ b/docker/ldap-automation/Dockerfile
@@ -1,14 +1,14 @@
-FROM alpine
+FROM python:3.10-alpine
 
 # Basic tools for now
-RUN apk add --update --no-cache bash ca-certificates curl jq git aws-cli openldap-clients build-base libffi-dev openssl-dev python3 py3-pip gcc musl-dev gcc g++ python3-dev mysql-dev linux-headers 
+RUN apk add --update --no-cache bash ca-certificates curl jq git aws-cli openldap-clients build-base libffi-dev openssl-dev gcc musl-dev gcc g++ linux-headers 
 
 RUN python3 -m pip install --upgrade pip
 ## related to https://github.com/oracle/python-oracledb/issues/204 - pip version fails to install due to cpython3
 # ignore whilst in dev
 
-RUN python3 -m pip install git+https://github.com/oracle/python-oracledb.git
+# RUN python3 -m pip install git+https://github.com/oracle/python-oracledb.git
 
-RUN python3 -m pip install git+https://github.com/ministryofjustice/hmpps-ldap-automation-cli.git@v0.3.0-dev.3
+RUN python3 -m pip install git+https://github.com/ministryofjustice/hmpps-ldap-automation-cli.git@dev
 
 CMD ["ldap-automation"]
