task def json path

--- a/.github/workflows/ldap-update-user-home-area.yml
+++ b/.github/workflows/ldap-update-user-home-area.yml
@@ -44,7 +44,7 @@ jobs:
             id: render
             with:
                 # Path to JSON file serving as the template for rendering an output file. Required.
-                json-file-path: operational-automation/task-def.json
+                json-file-path: ./docker/ldap-automation/task-def.json
                 # Multi-line string containing key/value pairs of JSON property paths and desired property values
                 field-value-pairs: |
                     $.containerDefinitions[0].command: ["ldap-automation", "update-user-home-areas", "--old-home-area", "${{ github.event.inputs.old_home_area }}", "--new-home-area", "${{ github.event.inputs.new_home_area }}"]
