--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -51,100 +51,8 @@ jobs:
 
                     $.containerDefinitions[0].containerName: "ldap-automation-task-${{ github.run_id }}"
 
-                    $.containerDefinitions[0].secrets: [
-                      {
-                        "name": "SECRET_LDAP_BIND_PASSWORD",
-                        "valueFrom": "arn:aws:secretsmanager:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:secret:delius-core-dev-openldap-bind-password-CagKSo"
-                      },
-                      {
-                        "name": "SECRET_LDAP_ADMIN_PASSWORD",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/LDAP_ADMIN_PASSWORD"
-                      },
-                      {
-                        "name": "SECRET_oasys_user",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/oasys_user"
-                      },
-                      {
-                        "name": "SECRET_oasys_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/oasys_password"
-                      },
-                      {
-                        "name": "SECRET_iaps_user",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/iaps_user"
-                      },
-                      {
-                        "name": "SECRET_iaps_user_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/iaps_user_password"
-                      },
-                      {
-                        "name": "SECRET_dss_user",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/dss_user"
-                      },
-                      {
-                        "name": "SECRET_dss_user_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/dss_user_password"
-                      },
-                      {
-                        "name": "SECRET_casenotes_user",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/casenotes_user"
-                      },
-                      {
-                        "name": "SECRET_casenotes_user_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/casenotes_user_password"
-                      },
-                      {
-                        "name": "SECRET_test_user_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/test_user_password"
-                      },
-                      {
-                        "name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/gdpr/api/client_secret",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/gdpr/api/client_secret"
-                      },
-                      {
-                        "name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/pwm/pwm/config_password",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/pwm/pwm/config_password"
-                      },
-                      {
-                        "name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/merge/api/client_secret",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/merge/api/client_secret"
-                      },
-                      {
-                        "name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/weblogic/ndelius-domain/umt_client_secret",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/weblogic/ndelius-domain/umt_client_secret"
-                      },
-                      {
-                        "name": "VAR_LDAP_HOST",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.event.inputs.environment }}/LDAP_HOST"
-                      },
-                      {
-                        "name": "VAR_LDAP_USER",
-                        "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.event.inputs.environment }}/LDAP_PRINCIPAL"
-                      },
-                      {
-                        "name": "VAR_LDAP_CONFIG_DICT",
-                        "value": "${{ vars.VAR_LDAP_CONFIG_DICT }}"
-                      },
-                      {
-                        "name": "VAR_RBAC_SUBSTITUTIONS_DICT",
-                        "value": "${{ vars.VAR_RBAC_SUBSTITUTIONS_DICT }}"
-                      },
-                      {
-                        "name": "VAR_SSM_PREFIX",
-                        "value": "SSM_"
-                      },
-                      {
-                        "name": "VAR_PROJECT_NAME",
-                        "value": "delius-core"
-                      },
-                      {
-                        "name": "VAR_ENVIRONMENT_NAME",
-                        "value": "delius-core-${{ github.event.inputs.environment }}"
-                      },
-                      {
-                        "name": "VAR_LDAP_ADMIN_USERNAME",
-                        "value": "admin"
-                      }
-                    ]
+                    $.containerDefinitions[0].secrets: [{"name": "SECRET_LDAP_BIND_PASSWORD", "valueFrom": "arn:aws:secretsmanager:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:secret:delius-core-dev-openldap-bind-password-CagKSo"}, {"name": "SECRET_LDAP_ADMIN_PASSWORD", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/LDAP_ADMIN_PASSWORD"}, {"name": "SECRET_oasys_user", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/oasys_user"}, {"name": "SECRET_oasys_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/oasys_password"}, {"name": "SECRET_iaps_user", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/iaps_user"}, {"name": "SECRET_iaps_user_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/iaps_user_password"}, {"name": "SECRET_dss_user", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/dss_user"}, {"name": "SECRET_dss_user_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/dss_user_password"}, {"name": "SECRET_casenotes_user", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/casenotes_user"}, {"name": "SECRET_casenotes_user_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/casenotes_user_password"}, {"name": "SECRET_test_user_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.events.inputs.environment }}/test_user_password"}, {"name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/gdpr/api/client_secret", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/gdpr/api/client_secret"}, {"name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/pwm/pwm/config_password", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/pwm/pwm/config_password"}, {"name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/merge/api/client_secret", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/merge/api/client_secret"}, {"name": "SECRET_/delius-core-${{ github.event.inputs.environment }}/delius-core-${{ github.event.inputs.environment }}/weblogic/ndelius-domain/umt_client_secret", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter:/delius-core-${{ github.event.inputs.environment }}/weblogic/ndelius-domain/umt_client_secret"}, {"name": "VAR_LDAP_HOST", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.event.inputs.environment }}/LDAP_HOST"}, {"name": "VAR_LDAP_USER", "valueFrom": "arn:aws:ssm:${{secrets.AWS_REGION}}:${{vars.AWS_ACCOUNT_ID}}:parameter/delius-core-${{ github.event.inputs.environment }}/LDAP_PRINCIPAL"}, {"name": "VAR_LDAP_CONFIG_DICT", "value": "${{ vars.VAR_LDAP_CONFIG_DICT }}"}, {"name": "VAR_RBAC_SUBSTITUTIONS_DICT", "value": "${{ vars.VAR_RBAC_SUBSTITUTIONS_DICT }}"}, {"name": "VAR_SSM_PREFIX", "value": "SSM_"}, {"name": "VAR_PROJECT_NAME", "value": "delius-core"}, {"name": "VAR_ENVIRONMENT_NAME", "value": "delius-core-${{ github.event.inputs.environment }}"}, {"name": "VAR_LDAP_ADMIN_USERNAME", "value": "admin"}]
+
                     $.containerDefinitions[0].logConfiguration.logDriver.options."awslogs-group": "/ecs/ldap-automation"
                     $.containerDefinitions[0].logConfiguration.logDriver.options."awslogs-region": "${{secrets.AWS_REGION}}"
                     $.containerDefinitions[0].logConfiguration.logDriver.options."awslogs-stream-prefix": "${{ github.run_id }}"
