--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -52,6 +52,7 @@ on:
       VerboseOutput: 
         description: "Verbose Output level"
         type: choice
+        options:
           - ""
           - "-v"
           - "-vv"
@@ -65,12 +66,19 @@ on:
         description: "Source version for the hmpps-env-configs repository. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "master"
-
+  push:
+    branches:
+      - DBA-511
     paths:
       - ansible/**
       - .github/workflows/oracle-backup.yml
+  pull_request:
     branches:
-      - main
+      - DBA-511
+    types: [opened, edited, reopened, synchronize]
+    paths:
+      - ansible/**
+      - .github/workflows/oracle-backup.yml
 
 jobs:
   # Start deployment container job based on the build delius-ansible-aws image
