add workflow dispatch to ansible image build

--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -1,6 +1,7 @@
 name: Delius Ansible AWS Image Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -125,7 +126,7 @@ jobs:
         with:
           name: openldap-image
           path: /tmp
-          
+
       - name: Load and retag image for publish
         run: |
           docker load --input /tmp/openldap.tar
