--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -36,7 +36,7 @@ jobs:
         id: setup_buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push to ghcr
+      - name: Build image and create artifact
         id: build_publish
         uses: docker/build-push-action@v2
         with:
