add write perms to package

--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -96,6 +96,7 @@ jobs:
     needs: [build-image, scan-image]
     permissions:
       contents: write
+      packages: write
     runs-on: ubuntu-latest
     outputs:
       new_tag: ${{ steps.bump-version.outputs.new_tag }}
