--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -96,6 +96,7 @@ jobs:
     needs: [build-image, scan-image]
     permissions:
       contents: write
+      packages: write
     runs-on: ubuntu-latest
     outputs:
       new_tag: ${{ steps.bump-version.outputs.new_tag }}
@@ -130,7 +131,7 @@ jobs:
       - name: Load and retag image for publish
         run: |
           docker load --input /tmp/ansible-aws-image.tar
-          docker tag ghcr.io/ministryofjustice/hmpps-delius-operational-automation:${{ steps.safe_tag.outputs.SAFE_TAG }}
+          docker tag hmpps-delius-operational-automation:${{ github.sha }} ghcr.io/ministryofjustice/hmpps-delius-operational-automation:${{ steps.safe_tag.outputs.SAFE_TAG }}
 
       - name: Log into ghcr
         uses: docker/login-action@v1
