--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -75,7 +75,7 @@ permissions:
 jobs:
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
-    name: "oracle-${var.short_environment_name}" "${local.component}-backup"
+    name: "oracle-${var.short_environment_name}-backup"
     environment: development
     runs-on: ubuntu-latest
     container:
@@ -85,16 +85,26 @@ jobs:
     steps:
 
       - name: Checkout hmpps-delius-operation-automation
-        uses: actions/checkout@${{ inputs.SourceCodeVersion }}
+        uses: actions/checkout@v4
         with:
+          sparse-checkout-cone-mode: false
+          sparse_checkout: |
+            playbooks/oracle_backup
+          path: operations
+          ref: ${{ inputs.SourceCodeVersion }}
           fetch-depth: 0
 
       - name: Checkout modernisation-platform-configuration-management
-        uses: actions/checkout@${{ inputs.SourceConfigVersion }}
+        uses: actions/checkout@$v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse_checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ inputs.SourceConfigVersion }}
           fetch-depth: 0
-          path: ansible
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -111,11 +121,6 @@ jobs:
           value: NotPassed
           description: Put AWS Parameter Status
 
-      - name: Test ansible
-        working-directory: ansible
+      - name: Test ansible playbook
         run: |
-          ansible-inventory --graph 
-          
-          
-#no_proxy="*"    
-# ansible-playbook backup.yml --limit environment_name_delius_core_development_dev_${{ inputs.TargetHost }} --extra-vars "@group_vars/dev.yml"
+          ansible-playbook operations/playbooks/oracle_backup/playbook.yml -i inventory/ansible -e target=environment_name_delius_core_development_dev_${{ inputs.TargetHost }}"
