--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -85,7 +85,7 @@ jobs:
     steps:
 
       - name: Checkout hmpps-delius-operation-automation
-        uses: actions/checkout@@v4.0.0
+        uses: actions/checkout@v4.0.0
         with:
           sparse-checkout-cone-mode: false
           sparse_checkout: |
