--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -75,7 +75,7 @@ permissions:
 jobs:
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
-    name: "oracle-${var.short_environment_name}-backup"
+    name: "oracle-backup"
     environment: development
     runs-on: ubuntu-latest
     container:
@@ -95,7 +95,7 @@ jobs:
           fetch-depth: 0
 
       - name: Checkout modernisation-platform-configuration-management
-        uses: actions/checkout@$v4
+        uses: actions/checkout@v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
