--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -92,7 +92,7 @@ jobs:
             playbooks/oracle_backup
           path: operations
           ref: ${{ inputs.SourceCodeVersion }}
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Checkout modernisation-platform-configuration-management
         uses: actions/checkout@v4.0.0
@@ -104,7 +104,7 @@ jobs:
             ansible/group_vars
           path: inventory
           ref: ${{ inputs.SourceConfigVersion }}
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -114,12 +114,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: SetInitialStatus
-        uses: stephenbawks/aws-ssm-parameter@v1.0.0
-        with:
-          name: $ssm_parameter_status
-          value: NotPassed
-          description: Put AWS Parameter Status
+      # - name: SetInitialStatus
+      #   uses: stephenbawks/aws-ssm-parameter@v1.0.0
+      #   with:
+      #     name: $ssm_parameter_status
+      #     value: NotPassed
+      #     description: Put AWS Parameter Status
 
       - name: Test ansible playbook
         run: |
