--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -67,6 +67,12 @@ on:
         type: string
         default: "main"
 
+  push:
+    branches:
+      - DBA-511
+    paths:
+      - .github/workflows/oracle-backup.yml
+
 # Allow permissions on repository and docker image respectively
 permissions:
   contents: read
